# ModernVRML

./: .gitignore  CMakeLists.txt  ModernVRML.pc.in  README.md  build.py  conanfile.py
.github/workflows/: conan.yml  main.yml
src/: CMakeLists.txt
src/Parser/: Appearance.cpp  Appearance.h  Coordinate.cpp  Coordinate.h  Document.cpp  Document.h  Geometry.cpp  Geometry.h  IComponent.h  Material.cpp  Material.h  Shape.cpp  Shape.h  Variable.h  Vector.h  WorldInfo.cpp  WorldInfo.h  bad_url.h  basetypes.cpp  basetypes.h  bounding_volume.cpp  bounding_volume.h  browser.cpp  browser.h  event.h  exposedfield.h  field_value.cpp  field_value.h  frustum.cpp  node.cpp  node.h  node_impl_util.cpp  node_impl_util.h  openvrml-common.h  openvrml-config.h  parser_global.h  rendering_context.h  scene.cpp  scene.h  scope.cpp  (+6 more)
src/Parser/local/: component.cpp  component.h  conf.cpp  externproto.cpp  externproto.h  field_value_types.h  node_metatype_registry_impl.cpp  node_metatype_registry_impl.h  parse_vrml.cpp  parse_vrml.h  proto.cpp  proto.h  uri.h  xml_reader.cpp  xml_reader.h
